# ivory-motion

./: Cargo.toml  config.example.toml
src/: bno055.rs  config.rs  drivers.rs  main.rs
src/bno055/: registers.rs
src/drivers/: bno055.rs
src/drivers/bno055/: registers.rs
src/drivers/bno055/registers/: calib_stat.rs  opr_mode.rs  power_mode.rs  sys_trigger.rs  unit_sel.rs
src/messages/: sensors.rs
src/messages/sensors/: bno055.rs  imu.rs
