[package]
name = "motion"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.0.32", features = ["derive"] }
env_logger = "0.10.0"
lapin = "2.1.1"
log = "0.4.17"
nalgebra = { version = "0.31.4", features = ["serde-serialize"] }
rppal = "0.14.1"
serde = "1.0.152"
serde_derive = "1.0.152"
serde_json = "1.0.91"
tokio = { version = "1.23.0", features = ["full"] }
tokio-executor-trait = "2.1.0"
tokio-reactor-trait = "1.1.0"
toml = "0.5.10"
